--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
 #Routes/Dependecy Injection 
   flutter_modular: ^5.0.3
 
+  json_serializable: ^6.7.1
+  json_annotation: ^4.8.1
+
 #State Management 
   mobx: ^2.1.3
   flutter_mobx: ^2.0.6+5
