--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,25 @@ dependencies:
     sdk: flutter
 #HTTP 
   dio: ^5.2.1+1   
-#Routes/Dependecy Injection 
-  flutter_modular: ^5.0.3
 
+#Local Storage Management 
+  shared_preferences: ^2.2.0
+  
+#Models/json Management
   json_serializable: ^6.7.1
   json_annotation: ^4.8.1
+
+#Routes/Dependecy Injection 
+  flutter_modular: ^5.0.3
 
 #State Management 
   mobx: ^2.1.3
   flutter_mobx: ^2.0.6+5
 
+#UI  
+  show_up_animation: ^2.0.0
+  palette_generator: ^0.3.3+2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -30,3 +39,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/background_objects/pokemons/
