changes: finished welcome page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,3 +41,19 @@ flutter:
   uses-material-design: true
   assets:
     - assets/background_objects/pokemons/
+    - assets/logo/
+
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 900
+
+        - asset: assets/fonts/Roboto-Italic.ttf
+          style: italic
+
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 700
+
+        - asset: assets/fonts/Roboto-Regular.ttf
+          weight: 500
