changes: added base to home page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,11 @@ dependencies:
   flutter_mobx: ^2.0.6+5
 
 #UI  
-  show_up_animation: ^2.0.0
+  flutter_svg: ^2.0.7
   palette_generator: ^0.3.3+2
+  show_up_animation: ^2.0.0
+  
+  
   
 dev_dependencies:
   flutter_test:
