changes: added random pokemon method in home page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
     - assets/background_objects/pokemons/
     - assets/logo/
     - assets/icons/
+    - assets/loading/
 
   fonts:
     - family: Roboto
