--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   mobx_codegen: ^2.1.1
+  http_mock_adapter: ^0.4.4
 
 flutter:
   uses-material-design: true
