--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: pokedex_colaboraapp
-description: A new Flutter project.
+name: pokedex
+description: a simple pokedex.
 publish_to: 'none'
 version: 0.1.0
 
