--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,10 @@
 - name: Flutter action
   # You may pin to the exact commit or the version.
   # uses: subosito/flutter-action@cc97e1648fff6ca5cc647fa67f47e70f7895510b
-  uses: subosito/flutter-action@v2.11.0
+steps:
+- uses: actions/checkout@v3
+- uses: subosito/flutter-action@v2
   with:
-    # The Flutter version to make available on the path
-    flutter-version: # optional, default is any
-    # The Flutter build release channel
-    channel: # optional, default is stable
-    # Cache the Flutter SDK
-    cache: # optional
-    # Identifier for the Flutter SDK cache
-    cache-key: # optional, default is flutter-:os:-:channel:-:version:-:arch:-:hash:
-    # Flutter SDK cache path
-    cache-path: # optional, default is ${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:
-    # The architecture of Flutter SDK executable (x64 or arm64)
-    architecture: # optional, default is ${{ runner.arch }}
+    flutter-version: '2.16.0
+    channel: 'any'
+- run: flutter --version
