--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,24 @@
-- name: Flutter action
-  # You may pin to the exact commit or the version.
-  # uses: subosito/flutter-action@cc97e1648fff6ca5cc647fa67f47e70f7895510b
-steps:
-- uses: actions/checkout@v3
-- uses: subosito/flutter-action@v2
-  with:
-    flutter-version: '2.16.0
-    channel: 'any'
-- run: flutter --version
+name: Flutter action
+on:
+  push:
+    branches:
+      - development
+jobs:
+  Flutter_Fetch:
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v2
+    with:
+      distribution: 'zulu'
+      java-version: '11'
+    - uses: subosito/flutter-action@v2.11.0
+    with:
+      flutter-version: '2.16.0'
+- run: flutter pub get
+- run: flutter test
+- run: flutter build apk
+- run: flutter build appbundle
+      
+    
+      
+  
